--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -4,6 +4,8 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    position: fixed;
+    background-color: white;
 }
 
 .headerwrap{
