--- a/src/Component/Header/Head.css
+++ b/src/Component/Header/Head.css
@@ -5,18 +5,84 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: pink;
+        /* background-color: pink; */
     }
     
     .headerwrap{
         width: 90%;
         height: 100%;
-        background-color: gray;
+        /* background-color: rgb(217, 199, 199); */
         display: flex;
     }
+
     .Logo{
-        /* width: 20%; */
-        /* height: 90%; */
+        width: 15%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        /* background-color: green; */
+    }
+    
+    .Logo img {
+        width: 100%;
+        height: 100%;
+        border: none;
+        color: white;
+        border-radius: 3px;
+        cursor: pointer;
+        object-fit: cover;
+    }
+
+    .centerNav{
+        width: 40%;
+        height: 80%;
+        /* background-color: red; */
+    }
+    
+    .centerNav ul{
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+    
+    .centerNav ul li {
+        list-style-type: none;
+        cursor: pointer;
+    }
+
+    .usericons{
+        display: flex;
+        align-items: center;
+        gap: 3px;
+    }
+    
+    .users{
+        font-size: 20px;
+    }
+
+    .CTA1{
+        width: 16%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        /* background-color: purple; */
+    }
+    .CTA{
+        display: none;
+    }
+    
+    .CTA1 button {
+        width: 100%;
+        height: 60%;
+        border: none;background-color: #0455B4;
+        color: white;
+        border-radius: 3px;
+        cursor: pointer;
+    }
+    /* .Logo{
         display: flex;
         align-items: center;
         background-color: yellow;
@@ -24,7 +90,6 @@
     .Logo img{
         width: 100%;
         height: 100%;
-        /* object-fit: contain; */
     }
     
     .Logo button {
@@ -37,8 +102,6 @@
     }
     
     .centerNav{
-        /* width: 50%; */
-        /* height: 80%; */
         background-color: black;
     }
     
@@ -51,9 +114,9 @@
         background-color: green;
     }
     .CTA1 {
+        width: 20%;
+        height: 100%;
         background-color: #93c1f6;
-        /* width: 20%; */
-        /* height: 90%; */
     }
     
     .centerNav ul li {
@@ -98,7 +161,7 @@
     
     .ham{
         display: none;
-    }
+    } */
   
 }
 
@@ -113,7 +176,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        /* background-color: aliceblue; */
+        position: fixed;
+        background-color: rgb(227, 239, 249);
     }
 
     .headerwrap{
