--- a/src/Component2/Pages/Profile/Profile.css
+++ b/src/Component2/Pages/Profile/Profile.css
@@ -247,7 +247,7 @@
     margin-top: 20px;
   }
   
-  button {
+  .ProfileFooter button {
     border: none;
     padding: 20px 20px;
     border-radius: 4px;
