--- a/src/Component/Header/Head.css
+++ b/src/Component/Header/Head.css
@@ -176,7 +176,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        position: fixed;
+        /* position: fixed; */
         background-color: rgb(227, 239, 249);
     }
 
