--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -4,7 +4,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
-    position: fixed;
+    /* position: fixed; */
     background-color: white;
 }
 
