--- a/src/Component/Header/Head.css
+++ b/src/Component/Header/Head.css
@@ -177,7 +177,7 @@
         align-items: center;
         justify-content: center;
         /* position: fixed; */
-        background-color: rgb(227, 239, 249);
+        /* background-color: rgb(227, 239, 249); */
     }
 
     .headerwrap{
