--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashCreateWriter/AdminDashCreateWriterNextContent/AdminDashCreateWriterNextContent.css
@@ -78,6 +78,7 @@
   text-align: center;
   z-index: 1000;
   animation: fadeInOut 3s ease-in-out;
+  line-height: 20px;
 }
 
 @keyframes fadeInOut {
@@ -99,6 +100,13 @@
   margin: 0;
   font-size: 16px;
   color: #333333;
+}
+
+
+.error-message {
+  color: red;
+  font-size: 14px;
+  margin-top: 5px;
 }
 
 /* Add any additional styling you prefer */
