--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -58,7 +58,7 @@ header{
 }
 
 .users{
-    font-size: 20px;
+    font-size: 30px;
 }
 
 .CTA1{
@@ -96,6 +96,44 @@ header{
 }
  ul li.active:hover {
     color: #0455B4; 
+}
+
+.optUser{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #000;
+    color: wheat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.LogSign{
+    width: 7%;
+    height: 15%;
+    background: white;
+    position: absolute;
+    top: 13%;
+    right: 29.5%;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    transition: all 320ms ease-in ;
+    padding: 10px;
+}
+
+.UnBox{
+    font-size: 15px;
+    list-style-type: none;
+    margin: 0;
+    color: black;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    align-items: center;
 }
 
 /* .active {
