--- a/src/Component2/AdminDashboard/AdminDashRight/AdminDashHome/AdminDashHome.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminDashHome/AdminDashHome.css
@@ -44,3 +44,38 @@
     margin-top: 10px;
   }
   
+  @media screen and (max-width: 426px) {
+    .HomeDashboard {
+      width: 100%;
+      height: 90vh;
+      /* background-color: #5ff2ef; */
+      /* padding: 20px;
+      border-radius: 8px;
+      box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); */
+    }
+    .DashboardContent{
+      /* background-color: gray; */
+      width: 100%;
+      height: 80%;
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .TaskAssignment, .WriterManagement{
+      /* background-color: rgb(7, 77, 77); */
+      width: 100%;
+      height: 100%;
+    }
+    .TaskAssignment h2,
+    .WriterManagement h2{
+      font-size: 20px;
+    }
+    .TaskAssignment p,
+    .WriterManagement p{
+      font-size: 15px;
+    }
+    .TaskAssignment img,
+  .WriterManagement img {
+    width: 100%;
+    max-height: 200px;
+  }
+  }
