--- a/src/Component/Header/Header.css
+++ b/src/Component/Header/Header.css
@@ -103,7 +103,7 @@ header{
     height: 30px;
     border-radius: 50%;
     background: #000;
-    color: wheat;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -136,6 +136,22 @@ header{
     align-items: center;
 }
 
+.Dash{
+    width: 50%;
+    height: 60%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* gap: 10px; */
+    justify-content: space-around;
+    /* background-color: pink; */
+    cursor: pointer;
+}
+
+.Dashboard{
+    /* background-color: yellow; */
+    font-size: 30px;
+}
 /* .active {
     font-weight: bold;
     color: blue;
