--- a/src/Component2/UserDashboard/UserDahRight/UserDashRight.css
+++ b/src/Component2/UserDashboard/UserDahRight/UserDashRight.css
@@ -125,7 +125,7 @@
       } */
 }
 
-@media (min-width: 426px) and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .UserUserIcon{
         display: flex;
     }
