--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverview.css
@@ -1,5 +1,5 @@
 .AllTask1 {
-  /* background-color: red; */
+  /* background-color: rgb(0, 153, 255); */
   width: 100%;
   height: 90vh;
   display: flex;
@@ -29,6 +29,7 @@
   margin: 10px;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  /* background-color: rgb(247, 65, 244); */
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -120,4 +121,17 @@
   font-size: 20px;
   font-weight: 700;
   color: white;
+}
+.commentBox{
+  background-color: pink;
+  display: flex;
+  flex-direction: column;
+}
+.commentBox input{
+  /* width: 50%; */
+  /* background-color: red; */
+  border-top: 1px solid #0455B4;
+  border-left: 1px solid #0455B4;
+  border-right: 1px solid #0455B4;
+  border-bottom: 1px solid #0455B4;
 }
