--- a/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverviewDesc/AdminTaskOverviewDesc.css
+++ b/src/Component2/AdminDashboard/AdminDashRight/AdminTaskOverview/AdminTaskOverviewDesc/AdminTaskOverviewDesc.css
@@ -1,24 +1,27 @@
 .AdmintaskoverviewStatus{
-    background-color: rgb(240, 153, 153);
+    /* background-color: rgb(173, 169, 169); */
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    width: 40%;
-    height: 50vh;
+    width: 100%;
+    height: 25vh;
     text-align: center;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    /* flex-direction: column; */
 }
 .AdmintaskoverviewStatusWrap{
-    width: 100%;
-    height: 100%;
+    width: 20%;
+    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    /* background-color: yellow; */
 }
 .AdmintaskoverviewStatus h2{
-    width: 100%;
+    width: 20%;
     height: 30%;
 }
 .AdmintaskoverviewStatus .Admintaskoverviewcolor1{
@@ -119,3 +122,62 @@
     padding-top: 20px;
     background-color: red;
 }
+
+
+.task-component {
+    border: 1px solid #ccc;
+    padding: 16px;
+    margin: 16px;
+    border-radius: 4px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  }
+  
+  .task-component .time-allocated,
+  .task-status {
+    color: #666;
+    /* background-color: green; */
+  }
+  
+  .task-component .delete-button {
+    background-color: #e74c3c;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 15px 12px;
+    cursor: pointer;
+    width: 180px;
+  }
+  
+  .comment-section {
+    margin-top: 16px;
+  }
+  
+  .comment-input {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    resize: vertical;
+  }
+  
+  .task-component .add-comment-button {
+    background-color: #3498db;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    padding: 15px 12px;
+    margin-top: 8px;
+    cursor: pointer;
+    width: 180px;
+  }
+
+  @media screen and (max-width: 426px) {
+    .AdmintaskoverviewStatusWrap h4{
+        /* background-color: red; */
+        color: #666;
+    }
+    .AdmintaskoverviewStatus h3{
+        color: #666;
+    }
+  }
+  
